--- a/index.html
+++ b/index.html
@@ -13,21 +13,11 @@
 <div class="black"></div>
 <div id="wrapper">
 	<div id="header">
-		<h1>Ego Café</h1>
-		<h2><strong class="sep-one"></strong>Better Beans. Better Coffee<strong class="sep-two"></strong></h2>
+		<h1>Robot Gear</h1>
+		<h2><strong class="sep-one"></strong>Trading, selling and buying for the specific uses of FIRST and VEX robotics<strong class="sep-two"></strong></h2>
 	</div>
 	<div id="middle">
-		<p>A relaxed and contemporary cafe bar in the centre of Palm Beach
-Opening this <span>Valentine’s - 14th Feb 2014</span></p>
-	</div>
-	<div id="footer">
-		<div>
-		<ul class="social">
-			<li class="facebook"><a href="#"></li>
-			<li class="twitter"><a href="#"></li>
-			<li class="youtube"><a href="#"></li>
-		</ul>
-		</div>
+		<p>Coming soon to help teams all over the world. <a href=https://discord.gg/8CHUbq3>Join our discord server</a> to help develop this tool.</span></p>
 	</div>
 </div>
 </body>
